# clawft

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  cliff.toml  docker-compose.yml  package-lock.json  package.json  weave.toml
crates/clawft-app/: Cargo.toml
crates/clawft-app/fixtures/: weftos-admin.toml
crates/clawft-app/src/: lib.rs  lifecycle.rs  manifest.rs  registry.rs  validation.rs
crates/clawft-cli/: Cargo.toml
crates/clawft-cli/src/: completions.rs  help_text.rs  main.rs  mcp_tools.rs
crates/clawft-cli/src/commands/: agent.rs  agents_cmd.rs  assess_cmd.rs  channels.rs  config_cmd.rs  cron.rs  gateway.rs  help_cmd.rs  kernel_cmd.rs  mcp_server.rs  memory_cmd.rs  mod.rs  onboard.rs  plugin_registry.rs  plugins_cmd.rs  security_cmd.rs  sessions.rs  skills_cmd.rs  voice.rs  (+4 more)
crates/clawft-cli/tests/: cli_integration.rs
crates/clawft-core/: Cargo.toml
crates/clawft-core/benches/: pipeline_bench.rs
crates/clawft-core/src/: agent_bus.rs  agent_routing.rs  bootstrap.rs  bus.rs  chain_event.rs  clawft_md.rs  complexity.rs  config_merge.rs  intelligent_router.rs  json_repair.rs  lib.rs  memory_bootstrap.rs  planning.rs  policy_kernel.rs  routing_validation.rs  runtime.rs  scoring.rs  security.rs  session.rs  session_indexer.rs  vector_store.rs  workspace.rs
crates/clawft-core/tests/: context_compression_integration.rs  phase1_integration.rs  phase2_integration.rs  property_tests.rs  security_tests.rs
crates/clawft-gui-egui/: Cargo.toml
crates/clawft-gui-egui/examples/: canon_slider_windows_deadlock_repro.rs  workshop-watcher.rs
crates/clawft-gui-egui/src/: app.rs  canon_demos.rs  lib.rs  live.rs  main.rs  theming.rs
crates/clawft-gui-egui/tests/: admin_app_e2e.rs  chip_surfaces.rs  surface_headless_render.rs  workshop_integration.rs
crates/clawft-kernel/: Cargo.toml  Dockerfile.alpine  docker-compose.yml
crates/clawft-kernel/src/: a2a.rs  agency.rs  agent_loop.rs  agent_registry.rs  app.rs  artifact_store.rs  auth_service.rs  boot.rs  calibration.rs  capability.rs  causal.rs  causal_predict.rs  chain.rs  cluster.rs  cognitive_tick.rs  config.rs  config_service.rs  console.rs  container.rs  cron.rs  crossref.rs  dead_letter.rs  democritus.rs  embedding.rs  embedding_onnx.rs  eml_coherence.rs  eml_kernel.rs  environment.rs  error.rs  gate.rs  governance.rs  health.rs  heartbeat.rs  hnsw_eml.rs  hnsw_service.rs  http_api.rs  http_facade.rs  impulse.rs  ipc.rs  lib.rs  (+50 more)
crates/clawft-kernel/tests/: e2e_integration.rs  feature_composition.rs  golden_snapshots.rs  stream_anchor_test.rs
crates/clawft-llm/: Cargo.toml
crates/clawft-llm/src/: browser_transport.rs  config.rs  eml_retry.rs  error.rs  failover.rs  lib.rs  openai_compat.rs  provider.rs  retry.rs  router.rs  sse.rs  types.rs
crates/clawft-llm/tests/: mock_http.rs
crates/clawft-platform/: Cargo.toml
crates/clawft-platform/src/: config_loader.rs  env.rs  fs.rs  http.rs  lib.rs  process.rs
crates/clawft-plugin/: Cargo.toml
crates/clawft-plugin-git/: Cargo.toml
crates/clawft-plugin-treesitter/: Cargo.toml
crates/clawft-plugin-treesitter/src/: analysis.rs  lib.rs  types.rs
crates/clawft-plugin/src/: error.rs  lib.rs  manifest.rs  message.rs  sandbox.rs  traits.rs
crates/clawft-service-whisper/: Cargo.toml
crates/clawft-service-whisper/examples/: publish_wav.rs
crates/clawft-service-whisper/src/: lib.rs  service.rs  windower.rs
crates/clawft-services/: Cargo.toml
crates/clawft-services/src/: error.rs  lib.rs  rvf_tools.rs
crates/clawft-substrate/: Cargo.toml
crates/clawft-substrate/src/: adapter.rs  bluetooth.rs  chain.rs  delta.rs  kernel.rs  lib.rs  mesh.rs  mic.rs  network.rs  physical.rs  projection.rs  snapshot.rs
crates/clawft-substrate/tests/: mock_adapter.rs
crates/clawft-surface/: Cargo.toml
crates/clawft-surface/fixtures/: weftos-admin-desktop.toml  weftos-chip-audio.toml  weftos-chip-bluetooth.toml  weftos-chip-exochain.toml  weftos-chip-kernel.toml  weftos-chip-mesh.toml  weftos-chip-tof.toml  weftos-chip-wifi.toml
crates/clawft-surface/src/: builder.rs  compose.rs  eval.rs  lib.rs  substrate.rs  test_harness.rs  tree.rs
crates/clawft-surface/tests/: eval_bindings.rs  headless_render.rs  roundtrip.rs  weftos_admin_builder.rs
crates/clawft-tools/: Cargo.toml
crates/clawft-tools/src/: audio_synthesize.rs  audio_transcribe.rs  delegate_tool.rs  file_tools.rs  lib.rs  memory_tool.rs  message_tool.rs  render_ui.rs  security_policy.rs  shell_tool.rs  spawn_tool.rs  url_safety.rs  voice_listen.rs  voice_speak.rs  web_fetch.rs  web_search.rs
crates/clawft-tools/tests/: security_integration.rs
crates/clawft-types/: Cargo.toml
crates/clawft-types/src/: agent_bus.rs  agent_routing.rs  canvas.rs  company.rs  config.rs  cron.rs  delegation.rs  error.rs  event.rs  goal.rs  lib.rs  provider.rs  registry.rs  routing.rs  secret.rs  security.rs  session.rs  skill.rs  workspace.rs
crates/clawft-types/tests/: fuzz_config.rs
crates/clawft-wasm/: Cargo.toml
crates/clawft-wasm/src/: alloc_trace.rs  allocator.rs  audit.rs  engine.rs  env.rs  fs.rs  http.rs  lib.rs  permission_store.rs  platform.rs  sandbox.rs
crates/clawft-wasm/wit/: plugin.wit
crates/clawft-wasm/www/: index.html  main.js
crates/clawft-weave/: Cargo.toml
crates/clawft-weave/src/: client.rs  daemon.rs  lib.rs  main.rs  protocol.rs  rvf_codec.rs  rvf_rpc.rs
crates/clawft-weave/tests/: agent_register_and_sign.rs  control_rpc.rs  ipc_subscribe_stream.rs  node_register.rs  substrate_rpc.rs
crates/eml-core/: Cargo.toml
crates/eml-core/examples/: attention_gate.rs
crates/eml-core/src/: attention.rs  features.rs  lib.rs  model.rs  operator.rs  tree.rs
crates/exo-resource-tree/: Cargo.toml
crates/exo-resource-tree/src/: boot.rs  delegation.rs  error.rs  lib.rs  model.rs  mutation.rs  permission.rs  scoring.rs  tree.rs
crates/weftos/: Cargo.toml
crates/weftos/src/: init.rs  lib.rs  main.rs
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs
tools/build-kb/: Cargo.toml
tools/build-kb/src/: main.rs
(+1752 files in other folders)
