[package]
name = "clawft-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI binary (weft) for clawft"
keywords = ["cli", "ai", "assistant", "agent", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "weft"
path = "src/main.rs"

[features]
default = ["channels", "services", "delegate"]
channels = ["dep:clawft-channels"]
services = ["dep:clawft-services"]
vector-memory = ["clawft-core/vector-memory"]
delegate = ["clawft-services/delegate", "clawft-tools/delegate"]

[dependencies]
clawft-types = { workspace = true }
clawft-platform = { workspace = true }
clawft-core = { workspace = true }
clawft-tools = { workspace = true }
clawft-channels = { workspace = true, optional = true }
clawft-llm = { workspace = true }
clawft-services = { workspace = true, optional = true }
clawft-security = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
pulldown-cmark = { workspace = true }
comfy-table = { workspace = true }
cron = { workspace = true }
tokio-util = { workspace = true }
rpassword = "5"
uuid = { workspace = true }
