[package]
name = "clawft-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core engine for clawft (agent loop, message bus, context management)"
keywords = ["ai", "agent", "pipeline", "tools", "llm"]
categories = ["development-tools"]

[features]
default = ["full"]
full = []
vector-memory = ["dep:rand", "dep:instant-distance"]
rvf = ["vector-memory", "dep:rvf-runtime", "dep:rvf-types", "dep:sha2", "dep:reqwest"]

[dependencies]
clawft-types = { workspace = true }
clawft-platform = { workspace = true }
clawft-llm = { workspace = true }
clawft-plugin = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true, optional = true }
serde_yaml = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
rvf-runtime = { workspace = true, optional = true }
rvf-types = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
notify = { workspace = true }
instant-distance = { workspace = true, optional = true }
percent-encoding = "2"
fnv = "1"

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clawft-platform = { workspace = true }
clawft-types = { workspace = true }
temp-env = "0.3"
