[package]
name = "clawft-gui-egui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "egui/eframe native GUI spike for ClawFT — ports the 12 core UI blocks"

[[bin]]
name = "weft-gui-egui"
path = "src/main.rs"

[lib]
name = "clawft_gui_egui"
path = "src/lib.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui_extras = { version = "0.29", features = ["all_loaders"] }
egui_plot = "0.29"

[features]
default = []
