[package]
name = "clawft-gui-egui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "egui/eframe native GUI spike for ClawFT — ports the 12 core UI blocks"

[[bin]]
name = "weft-gui-egui"
path = "src/main.rs"

[[bin]]
name = "weft-demo-lab"
path = "src/bin/demo_lab.rs"

[lib]
name = "clawft_gui_egui"
path = "src/lib.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
egui_plot = "0.29"
# Official egui demo for theming-lab work (mirrors https://www.egui.rs/#demo locally).
egui_demo_lib = "0.29"
# Vendored demos that live in egui_demo_app (bin-only crate) rely on these:
ehttp = { version = "0.5", features = ["native-async"] }
poll-promise = "0.3"
log = "0.4"

# Live kernel connection (poller thread reads from the daemon IPC socket).
clawft-rpc = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }

[features]
default = []
# Enable procedural boot sounds (pulls in rodio → cpal → alsa on Linux).
audio = ["dep:rodio"]

[dependencies.rodio]
version = "0.19"
optional = true
default-features = false
features = ["symphonia-wav"]
