[package]
name = "clawft-platform"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Platform abstraction layer for clawft"
keywords = ["platform", "abstraction", "wasm", "http", "filesystem"]
categories = ["development-tools"]

[dependencies]
clawft-types = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
