[package]
name = "clawft-plugin"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Plugin trait definitions for clawft"
keywords = ["plugin", "traits", "ai", "agent", "extensibility"]
categories = ["development-tools"]

[features]
default = ["native"]
native = ["dep:tokio-util"]
voice = ["voice-vad", "voice-wake", "dep:tokio"]
voice-stt = []
voice-tts = []
voice-vad = []
voice-wake = []

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
chrono = { workspace = true }
tracing = { workspace = true }
semver = "1"
reqwest = { workspace = true, default-features = false, features = ["json", "multipart"] }

[dev-dependencies]
tokio = { workspace = true }
