[package]
name = "clawft-substrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WeftOS substrate state tree + OntologyAdapter contract (ADR-017). M1.5 ships the kernel adapter; additional adapters (git, gh, fs, lsp, workspace, deployment) arrive in M1.6+."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

# Kernel adapter re-uses the existing daemon RPC client.
clawft-rpc = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["sync", "rt", "time", "macros"] }

# WASM build: tokio only needs sync + macros; the kernel poller task is
# spawned via caller-provided runtime. We don't target wasm for M1.5 but
# the trait/types are target-agnostic by design.
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["sync", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
