[package]
name = "clawft-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types for the clawft AI assistant framework"
keywords = ["ai", "assistant", "types", "agent", "llm"]
categories = ["development-tools"]

[features]
default = ["native"]
native = ["dep:dirs"]
browser = ["uuid/js", "dep:getrandom"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
