[package]
name = "clawft-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WASM entrypoint for clawft"
keywords = ["wasm", "wasi", "ai", "agent", "edge"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm-plugins = [
    "dep:clawft-plugin",
    "dep:url",
    "dep:regex",
    "dep:tracing",
    "dep:thiserror",
    "dep:dirs",
    "dep:chrono",
    "dep:wasmtime",
]
alloc-talc = ["dep:talc"]
alloc-lol = ["dep:lol_alloc"]
alloc-tracing = []

[dependencies]
clawft-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Behind wasm-plugins feature
clawft-plugin = { workspace = true, optional = true }
url = { version = "2", optional = true }
regex = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
wasmtime = { version = "29", optional = true, default-features = false, features = ["cranelift", "runtime"] }

[dev-dependencies]
wat = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dlmalloc = { version = "0.2", features = ["global"] }
talc = { version = "4.4", optional = true }
lol_alloc = { version = "0.4", optional = true }
