[package]
name = "eml-core"
version = "0.1.0"
edition = "2021"
description = "EML (exp-ln) universal function approximation — O(1) learned functions from data"
license = "MIT OR Apache-2.0"
repository = "https://github.com/weave-logic-ai/weftos"
keywords = ["machine-learning", "symbolic-regression", "function-approximation", "eml"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
