[package]
name = "exo-resource-tree"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WeftOS exo-resource-tree: hierarchical resource namespace with Merkle integrity"
keywords = ["resource", "tree", "merkle", "permission", "namespace"]
categories = ["data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rvf-crypto = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
