[package]
name = "weftos-gui"
version = "0.1.0"
description = "WeftOS K8 GUI — Tauri 2.0 desktop shell"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "weftos_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
