[package]
name = "build-kb"
version = "0.2.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
sha2 = "0.10"
regex = "1"
rvf-types = { version = "0.2", default-features = false, features = ["std"] }
weftos-rvf-wire = "0.2"
ciborium = "0.2"
